# url-downloader

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/url_downloader/: arguments.hpp  parallel_download.hpp  printer.hpp
src/: CMakeLists.txt  arguments.cpp  main.cpp  parallel_download.cpp  printer.cpp  url_downloader.cpp
